great experience with cmake

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -9,7 +9,19 @@
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "",
+      "variables": [
+        {
+          "name": "CMAKE_TOOLCHAIN_FILE",
+          "value": "D:\\dev\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake",
+          "type": "STRING"
+        },
+        {
+          "name": "RAPIDXML_INCLUDE_DIRS",
+          "value": "D:/dev/vcpkg/installed/x86-windows/include/rapidxml",
+          "type": "PATH"
+        }
+      ]
     }
   ]
 }
